# deteccionParqueadero

./: .dockerignore  .gitignore  Detector_parqueaderos.py  Dockerfile  README.md  main.py  predict_video.py  pyproject.toml  requirements.txt  start_mlflow_ui.py  train.py  train_mlflow.py
data/PKLot.v2-640.yolov8/: data.yaml
data/mini_PKLot.v2-640.yolov8/: data.yaml
data/mini_PKLot.v2-640.yolov8/labels/: train.cache  val.cache
docs/: LICENSE  README.md
protos/: parking.proto
src/grpc_api/: parking_pb2.py  parking_pb2_grpc.py
src/grpc_client/: client.py
src/grpc_server/: server.py
src/streamlit_ui/: app.py
src/utils/: create_subset_pklot.py  mlflow_utils.py
tests/: conftest.py  test_predict_media.py
