# pyproject.toml
# Definición mínima para construir e instalar los scripts del proyecto.

-----------------
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-parking-detector"
version = "0.1.0"
description = "Detección de plazas de parqueo con YOLOv8 + demo Streamlit + MLflow tracking."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Si quieres incluir dependencias al instalar con `pip install .`, descomenta:
# dependencies = [
#   "ultralytics==8.3.205",
#   "opencv-python==4.12.0.88",
#   "streamlit>=1.50.0",
#   "mlflow==2.16.2"
# ]

[project.urls]
Homepage = "https://github.com/tu-usuario/tu-repo"
Issues   = "https://github.com/tu-usuario/tu-repo/issues"

[project.scripts]
predict-video   = "predict_video:main"
start-mlflow-ui = "start_mlflow_ui:main"
# app = "src.streamlit_ui.app:main"  # si defines una función main()

[tool.setuptools]
py-modules = ["predict_video", "start_mlflow_ui"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
