# pyproject.toml

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-parking-detector"
version = "0.1.0"
description = "Detección de plazas de parqueo con YOLOv8 + demo Streamlit + MLflow tracking."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/mluciacaicedo/deteccionParqueadero"
Issues = "https://github.com/mluciacaicedo/deteccionParqueadero/issues"

[project.scripts]
predict-video = "predict_video:main"
start-mlflow-ui = "start_mlflow_ui:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"
markers = [
  "slow: pruebas lentas que pueden usar el modelo (úsalo con -m 'not slow' para omitir)"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
